update makefile for static library

--- a/src/Makefile
+++ b/src/Makefile
@@ -22,10 +22,12 @@ all:
 	-@make $(UNAME)
 
 Darwin: tinyxml2.o libjson libspatdif.dylib 
-	cp libspatdif.dylib ../examples
+	# cp libspatdif.dylib ../examples
 	# install_name_tool -id @loader_path/../Resources/libspatdif.dylib libspatdif.dylib # PD external needs this
 	# install_name_tool -id @loader_path/../../spatdiflib/src/libspatdif.dylib libspatdif.dylib # Max externals needs this
-	cp libspatdif.dylib libspatdif.dylib.dSYM/Contents/resources/DWARF/
+	# cp libspatdif.dylib libspatdif.dylib.dSYM/Contents/resources/DWARF/
+	ar rcs libSpatDIF.a *.o
+	rm *.o
 
 Linux: tinyxml2.o libjson.a libspatdif.so
 	cd ../examples; make 
